Fix refreshing page

--- a/WebUI/Web.config
+++ b/WebUI/Web.config
@@ -17,6 +17,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <system.net>
+    <!--<defaultProxy>
+      <proxy proxyaddress="http://127.0.0.1:8888" />
+    </defaultProxy>-->
+  </system.net>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
