--- a/Web/Web.config
+++ b/Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DBConnectionString" connectionString="Data Source=localhost;Initial Catalog=SOCloseVoteTracker;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DBConnectionStringReadWrite" connectionString="Data Source=localhost;Initial Catalog=SOCloseVoteTracker;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="SettingsFileLocation" value="C:\Development\vso\SOCloseVoteTracker\settings.json" />
