--- a/WebUI/Web.config
+++ b/WebUI/Web.config
@@ -8,8 +8,8 @@
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
   <connectionStrings>
-    <add name="DBConnectionStringReadWrite" connectionString="Data Source=localhost;Initial Catalog=SOCloseVoteTracker;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="DBConnectionStringReadOnly" connectionString="Data Source=localhost;Initial Catalog=SOCloseVoteTracker;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ReadWriteConnection" connectionString="Data Source=localhost;Initial Catalog=SOCloseVoteTracker;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ReadOnlyConnection" connectionString="Data Source=localhost;Initial Catalog=SOCloseVoteTracker;Integrated Security=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
   <appSettings>
     <add key="SettingsFileLocation" value="C:\Code\SOCloseVoteTracker\settings.json" />
