Implement authentication to stackexchange from stackoverflow

--- a/StackExchangeScraper/StackExchangeScraper.csproj
+++ b/StackExchangeScraper/StackExchangeScraper.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Sockets\ActiveQuestionSocket.cs" />
     <Compile Include="Sockets\BaseStackExchangeSocket.cs" />
     <Compile Include="Sockets\ExchangeSite.cs" />
+    <Compile Include="StackExchangeAPI.cs" />
     <Compile Include="StackOverflowAuthenticator.cs" />
   </ItemGroup>
   <ItemGroup>
