API working, kind of. Need to work on close vote reasons

--- a/SOCloseVoteTracker/App.config
+++ b/SOCloseVoteTracker/App.config
@@ -8,7 +8,7 @@
     <add name="DBConnectionString" connectionString="Data Source=localhost;Initial Catalog=SOCloseVoteTracker;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="SettingsFileLocation" value="C:\Development\vso\SOCloseVoteTracker\settings.json" />
+    <add key="SettingsFileLocation" value="C:\Code\SOCloseVoteTracker\settings.json" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
