--- a/StackExchangeScraper/StackExchangeScraper.csproj
+++ b/StackExchangeScraper/StackExchangeScraper.csproj
@@ -56,6 +56,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="APIModels\BaseAPIModel.cs" />
+    <Compile Include="APIModels\QuestionApiModel.cs" />
     <Compile Include="LiteChatScraper.cs" />
     <Compile Include="QuestionModel.cs" />
     <Compile Include="QuestionScraper.cs" />
