--- a/StackExchangeScraper/packages.config
+++ b/StackExchangeScraper/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.3.1" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="RestSharp" version="105.2.3" targetFramework="net45" />
   <package id="WebSocketSharp" version="1.0.3-rc9" targetFramework="net45" />
