--- a/WebUI/packages.config
+++ b/WebUI/packages.config
@@ -3,6 +3,8 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Hangfire.Core" version="1.6.0-beta1" targetFramework="net452" />
+  <package id="Hangfire.SqlServer" version="1.6.0-beta1" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
