API up and working

--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Migrations\201604160520166_QueuedAndCloseVoteQueue.Designer.cs">
       <DependentUpon>201604160520166_QueuedAndCloseVoteQueue.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201604170141566_RemoveForeignKeyForDuplicates.cs" />
+    <Compile Include="Migrations\201604170141566_RemoveForeignKeyForDuplicates.Designer.cs">
+      <DependentUpon>201604170141566_RemoveForeignKeyForDuplicates.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReadWriteDataContext.cs" />
     <Compile Include="Entities\CloseVote.cs" />
     <Compile Include="Entities\CVPlsRequest.cs" />
@@ -250,6 +254,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201604160520166_QueuedAndCloseVoteQueue.resx">
       <DependentUpon>201604160520166_QueuedAndCloseVoteQueue.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604170141566_RemoveForeignKeyForDuplicates.resx">
+      <DependentUpon>201604170141566_RemoveForeignKeyForDuplicates.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
